--- a/router-annotation/build.gradle
+++ b/router-annotation/build.gradle
@@ -6,5 +6,5 @@ targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = JavaVersion.VERSION_1_8
 
 // 引入发布脚步
-apply from: rootProject.file("maven-publish.gradle")
+// apply from: rootProject.file("maven-publish.gradle")
 
