--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.ApplicationA"
         tools:targetApi="31">
         <activity
+            android:name=".SecondActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,9 +28,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
-                <action android:name="com.baidu.searchbox.ACTION_A"/>
+                <action android:name="com.baidu.searchbox.ACTION_A" />
             </intent-filter>
         </activity>
     </application>
