--- a/router-processor/build.gradle
+++ b/router-processor/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     // 自动注入
     implementation 'com.google.auto.service:auto-service:1.0-rc7'
     annotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
